# openlakeforge

./: .dockerignore  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: checks.yml
docs/: industrialization-roadmap.md  technical-debt.md
docs/adr/: 0001-v1-platform-baseline.md  0002-local-object-storage-seaweedfs.md  0003-local-dagster-project-code-runtime.md  0004-manifest-first-floe-sales-ingestion.md  0005-dbt-duckdb-gold-on-dagster-kubernetes.md  0006-openmetadata-governance-and-openlineage.md  0007-superset-reporting-over-gold-via-trino.md  0008-two-phase-deploy-infra-and-artifacts.md  0009-openmetadata-lineage-direct-rest-push.md  0010-provider-contract-first-cloud-readiness.md  0011-iceberg-catalog-contract-allows-glue.md  0012-contract-driven-provider-first-hardening.md  0013-medallion-bucket-split.md  0014-ops-artifact-bucket-and-domain-dagster-locations.md  0015-aws-eks-managed-services-poc.md  0016-aws-eks-pod-identity-over-irsa.md  0017-shared-python-deploy-tooling.md  0018-trino-gold-materialization.md  README.md
docs/architecture/: README.md  aws-eks-poc.md  azure-aks-poc.md  local-stack-contracts.md  openlakeforge-v1-architecture.md  openlakeforge-v1-architecture.mmd  overview.md  provider-contracts.md
docs/architecture/diagrams/: README.md  chart3-ephemeral-job-lifecycle.md
docs/release/: component-catalog.md
docs/schema/: domain.schema.json
docs/setup/: cloud-poc-setup.md
docs/testing/: floe-openlineage-capture-test-plan.md
domains/: README.md  __init__.py  definitions.py
domains/sales/: README.md  __init__.py  definitions.py  domain.yaml
domains/sales/extract/: __init__.py
domains/sales/orchestration/: __init__.py
domains/sales/pipelines/: __init__.py
domains/sales/tests/: test_iteration2_smoke.py  test_iteration3_definitions.py  test_sales_pipeline_definitions.py
domains/supply_chain/: README.md  __init__.py  definitions.py  domain.yaml
domains/supply_chain/extract/: __init__.py
domains/supply_chain/pipelines/: __init__.py
images/: README.md
images/project-code/: Dockerfile  README.md  pyproject.toml
images/superset/: Dockerfile  README.md
images/superset/patches/: patch_trino_iceberg_partitions.py
infra/: README.md
infra/helm/: README.md
infra/helm/values/: garage.yaml  polaris.yaml  seaweedfs.yaml  trino.yaml
infra/kind/: cluster.yaml
infra/terraform/: README.md
libs/: README.md  __init__.py  bronze_csv.py  k8s_log_archive.py  openlakeforge_logging.py  product_dagster.py  s3_artifacts.py
libs/dbt/: __init__.py  render_profiles.py
libs/dbt/duckdb_plugins/: __init__.py  glue_iceberg.py
libs/dbt/openlakeforge_dbt/: dbt_project.yml
libs/dbt/profiles/: aws.yml  azure.yml  local.yml
libs/floe/profiles/: aws-eks.yml  local-k8s.yml
release/: component-catalog.yaml
scripts/: README.md  check-infra.sh  check-project-code.sh  check-structure.sh
scripts/artifacts/: dbt-parse.sh  floe-manifest.sh  olf.sh
scripts/aws/foundation/: down.sh  up.sh
scripts/aws/images/: build-push-project-code.sh  build-push-superset.sh
scripts/aws/stack/: deploy-artifacts.sh  infra-up.sh  platform-up.sh  setup.sh  teardown.sh
scripts/aws/test/: e2e.sh
scripts/azure/foundation/: down.sh  up.sh
scripts/azure/images/: build-push-project-code.sh  build-push-superset.sh
scripts/azure/stack/: deploy-artifacts.sh  infra-up.sh  platform-up.sh  (+2 more)
scripts/contracts/: load-runtime-env.sh
scripts/lib/: common.sh  docker.sh  helm.sh  kube.sh  python.sh
scripts/local/: bootstrap-garage.sh  bootstrap-polaris.sh  bootstrap-seaweedfs.sh  build-project-code-image.sh  build-superset-image.sh  create-cluster.sh  dagster-smoke.sh  dbt-parse.sh  destroy-cluster.sh  floe-manifest.sh  iteration3-smoke.sh  load-project-code-image.sh  prefetch-images.sh  setup.sh  superset-reports-deploy.sh  superset-reports-export.sh  teardown.sh  upload-floe-manifest.sh
scripts/test/: check-components.sh  check-contracts.sh  check-dbt.sh  check-infra.sh  check-project-code.sh  check-structure.sh
tools/olf/: README.md  pyproject.toml
tools/olf/olf/: __init__.py  cli.py  config.py  contracts.py  descriptors.py  e2e.py  floe.py  k8s.py  log.py  openmetadata.py  polaris.py  retry.py  s3.py  superset.py
tools/olf/tests/: test_artifacts.py  test_cli.py  test_component_catalog.py  test_contracts.py  test_dbt.py  test_descriptors.py  test_e2e.py  test_floe.py  test_k8s.py  test_openmetadata.py  test_polaris.py  test_superset.py
tools/olf/tests/fixtures/: aws-provider-contracts.json  local-provider-contracts.json
(+225 files in other folders)
