[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "openlakeforge-project-code"
version = "0.3.0"
description = "OpenLakeForge project-code runtime package."
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiobotocore==2.22.0",
  "boto3==1.37.3",
  "dagster==1.13.6",
  "dagster-dbt==0.29.6",
  "dagster-floe[kubernetes]==0.2.3",
  "dagster-k8s==0.29.6",
  "dagster-postgres==0.29.6",
  "dagster-webserver==1.13.6",
  "dbt-duckdb>=1.9.6,<1.10",
  "dlt>=1.17,<2",
  "duckdb>=1.4.1,<1.5",
  "kubernetes<36",
  "pyOpenSSL==26.3.0",
  "s3fs==2025.3.0",
]

[tool.setuptools.packages.find]
include = ["domains*", "libs*"]
