[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "openlakeforge-project-code"
version = "0.3.0"
description = "OpenLakeForge project-code runtime package."
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiobotocore==2.22.0",
  "boto3==1.37.3",
  "dagster==1.13.6",
  "dagster-aws==0.29.6",
  "dagster-dbt==0.29.6",
  "dagster-floe[kubernetes]==0.2.3",
  "dagster-k8s==0.29.6",
  "dagster-postgres==0.29.6",
  "dagster-webserver==1.13.6",
  "dbt-duckdb>=1.10.0,<1.11",
  "dlt>=1.17,<2",
  "duckdb>=1.4.5,<1.5",
  # Keep grpc health-check protobuf gencode compatible with Dagster's protobuf<7
  # runtime constraint.
  "grpcio-health-checking<1.77",
  "kubernetes<36",
  # Required by DuckDB's Python scalar UDF registration (duckdb.create_function),
  # which the libs.dbt.duckdb_plugins.glue_iceberg plugin uses to work around the
  # DuckDB Iceberg + Glue createTable location gap.
  "numpy>=1.26,<3",
  "pyOpenSSL==26.3.0",
  "s3fs==2025.3.0",
]

[tool.setuptools.packages.find]
include = ["domains*", "libs*"]
