[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "openlakeforge-project-code"
version = "0.3.0"
description = "OpenLakeForge project-code runtime package."
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiobotocore==2.22.0",
  "boto3==1.37.3",
  "dagster==1.13.6",
  "dagster-aws==0.29.6",
  "dagster-dbt==0.29.6",
  "dagster-floe[kubernetes]==0.2.5",
  "dagster-k8s==0.29.6",
  "dagster-postgres==0.29.6",
  "dagster-webserver==1.13.6",
  "dbt-trino==1.10.2",
  "dlt>=1.17,<2",
  # Keep grpc health-check protobuf gencode compatible with Dagster's protobuf<7
  # runtime constraint.
  "grpcio-health-checking<1.77",
  "kubernetes<36",
  "openlineage-dbt==1.45.0",
  "pyOpenSSL==26.3.0",
  "s3fs==2025.3.0",
]

[tool.setuptools.packages.find]
include = ["domains*", "libs*"]
